add product details